--- a/views/orderDashboard.ejs
+++ b/views/orderDashboard.ejs
@@ -52,14 +52,30 @@
                         <% } %>
                     </tbody>
                     <tfoot>
-                        <% const finalTotal = !isNaN(parseFloat(order.total_amount)) ? parseFloat(order.total_amount) : orderTotal; %>
+                        <%
+                            const summary = order.summary || {};
+                            const storedTotal = !isNaN(parseFloat(order.total_amount)) ? parseFloat(order.total_amount) : orderTotal;
+                            const subtotal = typeof summary.subtotal === 'number' ? summary.subtotal : orderTotal;
+                            const shippingFee = typeof summary.shippingFee === 'number' ? summary.shippingFee : Math.max(0, storedTotal - subtotal);
+                            const grandTotal = typeof summary.total === 'number' ? summary.total : subtotal + shippingFee;
+                        %>
                         <tr>
                             <th colspan="3" class="text-end">Order Subtotal</th>
-                            <th>$<%= orderTotal.toFixed(2) %></th>
+                            <th>$<%= subtotal.toFixed(2) %></th>
+                        </tr>
+                        <tr>
+                            <th colspan="3" class="text-end">Shipping</th>
+                            <th>
+                                <% if (shippingFee === 0) { %>
+                                    <span class="text-success">Free</span>
+                                <% } else { %>
+                                    $<%= shippingFee.toFixed(2) %>
+                                <% } %>
+                            </th>
                         </tr>
                         <tr>
                             <th colspan="3" class="text-end">Order Total</th>
-                            <th>$<%= finalTotal.toFixed(2) %></th>
+                            <th>$<%= grandTotal.toFixed(2) %></th>
                         </tr>
                     </tfoot>
                 </table>
