--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -100,6 +100,9 @@
             <a class="nav-link" href="/inventory">Inventory</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/admin/manage-admin">Manage Admin</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/addProduct">Add Product</a>
           </li>
           <li class="nav-item">
