clear button format

--- a/views/shopping.ejs
+++ b/views/shopping.ejs
@@ -486,6 +486,10 @@
     height: 48px;
     border-radius: 12px;
     padding: 0 18px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 1.2;
   }
 
 </style>
